refactored filter for parameters to be handled by api + adpated tests and added new ones for year and rating + edited UI for year and rating